--- a/catalog.html
+++ b/catalog.html
@@ -12,8 +12,8 @@
   <header class="header">
     <div class="header__wrapper">
       <div class="container container_flex">
-        <a href="index.html" class="header__logo-link"><img class="header__logo-img" src="img/logo-header.png"
-            alt="Техномарт" width="110" height="18"></a>
+        <a href="index.html" class="header__logo-link"><img class="header__logo-img" src="img/logo-header.png" alt="Техномарт"
+            width="110" height="18"></a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <input class="search__input" id="search" type="search" name="search" placeholder="Поиск:">
           <label class="search__label" for="search" aria-label="Поиск"></label>
@@ -67,8 +67,7 @@
   <main class="main-content">
     <div class="container">
       <ul class="breadcrumbs">
-        <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link breadcrumbs__trail"
-            aria-label="Главная"></a></li>
+        <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link breadcrumbs__trail" aria-label="Главная"></a></li>
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__trail">Каталог</a></li>
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__trail">Инструмент</a></li>
         <li class="breadcrumbs__item"><a class="breadcrumbs__link">Перфораторы</a></li>
@@ -98,14 +97,13 @@
             <hr class="separator">
             <fieldset class="filters-product__group">
               <legend class="filters-product__group-title">Производители:</legend>
-              <input class="filters-product__choice" id="bosch" type="checkbox"
-                name="manufacturers" value="Bosch" checked>
+              <input class="filters-product__choice" id="bosch" type="checkbox" name="manufacturers" value="Bosch"
+                checked>
               <label class="filters-product__manufacturers" for="bosch">Bosch</label>
-              <input class="filters-product__choice" id="interskol" type="checkbox" name="manufacturers"
-                value="Интерскол">
+              <input class="filters-product__choice" id="interskol" type="checkbox" name="manufacturers" value="Интерскол">
               <label class="filters-product__manufacturers" for="interskol">Интерскол</label>
-              <input class="filters-product__choice" id="makita" type="checkbox"
-                name="manufacturers" value="Makita" checked>
+              <input class="filters-product__choice" id="makita" type="checkbox" name="manufacturers" value="Makita"
+                checked>
               <label class="filters-product__manufacturers" for="makita">Makita</label>
               <input class="filters-product__choice" id="dewalt" type="checkbox" name="manufacturers" value="Dewalt">
               <label class="filters-product__manufacturers" for="dewalt">Dewalt</label>
@@ -115,11 +113,10 @@
             <hr class="separator">
             <fieldset class="filters-product__group">
               <legend class="filters-product__group-title">Питание:</legend>
-              <input class="filters-product__choice" type="radio" name="power"
-                id="rechargeable" value="rechargeable" checked>
+              <input class="filters-product__choice" type="radio" name="power" id="rechargeable" value="rechargeable"
+                checked>
               <label class="filters-product__type" for="rechargeable">Аккумуляторные</label>
-              <input class="filters-product__choice" type="radio" name="power"
-                id="mains" value="mains">
+              <input class="filters-product__choice" type="radio" name="power" id="mains" value="mains">
               <label class="filters-product__type" for="mains">Сетевые</label>
             </fieldset>
             <button class="filters-product__show">Показать</button>
@@ -133,8 +130,7 @@
               <li class="sorting__item"><a href="#" class="sorting__link sorting__link_active">По цене</a></li>
               <li class="sorting__item"><a href="#" class="sorting__link">По типу</a></li>
               <li class="sorting__item"><a href="#" class="sorting__link">По функционалу</a></li>
-              <li class="sorting__item"><a href="#" class="sorting__link-up sorting__link-up_active"
-                  aria-label="Сортировка по возрастанию"></a></li>
+              <li class="sorting__item"><a href="#" class="sorting__link-up sorting__link-up_active" aria-label="Сортировка по возрастанию"></a></li>
               <li class="sorting__item"><a href="#" class="sorting__link-down" aria-label="Сортировка по убыванию"></a>
               </li>
             </ul>
@@ -143,8 +139,7 @@
             <article class="product">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 3000">
+                <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
                 <span class="product__discount">22500 Р.</span>
                 <p class="product__price">15500 Р.</p>
@@ -157,8 +152,7 @@
             <article class="product">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 6000">
+                <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
                 <span class="product__discount">30500 Р.</span>
                 <p class="product__price">25500 Р.</p>
@@ -171,8 +165,7 @@
             <article class="product product_new">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 2000">
+                <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
                 <span class="product__discount product__discount_visually-hidden"></span>
                 <p class="product__price">12500 Р.</p>
@@ -185,8 +178,7 @@
             <article class="product">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 3000">
+                <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
                 <span class="product__discount">22500 Р.</span>
                 <p class="product__price">15500 Р.</p>
@@ -199,8 +191,7 @@
             <article class="product product_new">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 6000">
+                <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
                 <span class="product__discount">30500 Р.</span>
                 <p class="product__price">25500 Р.</p>
@@ -213,8 +204,7 @@
             <article class="product">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 2000">
+                <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
                 <span class="product__discount product__discount_visually-hidden"></span>
                 <p class="product__price">12500 Р.</p>
@@ -227,8 +217,7 @@
             <article class="product product_new">
               <h2 class=" visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 3000">
+                <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
                 <span class="product__discount">22500 Р.</span>
                 <p class="product__price">15500 Р.</p>
@@ -241,8 +230,7 @@
             <article class="product">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 6000">
+                <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
                 <span class="product__discount">30500 Р.</span>
                 <p class="product__price">25500 Р.</p>
@@ -255,8 +243,7 @@
             <article class="product">
               <h2 class="visually-hidden">Описание товара</h2>
               <section class="product__about">
-                <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170"
-                  alt="Перфоратор BOSCH BFG 2000">
+                <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
                 <span class="product__discount product__discount_visually-hidden"></span>
                 <p class="product__price">12500 Р.</p>
@@ -271,7 +258,7 @@
             <a href="#" class="page__link page__link_active">1</a>
             <a href="#" class="page__link">2</a>
             <a href="#" class="page__link">3</a>
-            <a href="#" class="page__link-next">Следующая</a>
+            <a href="#" class="page__link page__link-next">Следующая</a>
           </div>
           <div class="popup-order">
             <div class="wrapper-popup-order__title">
@@ -285,10 +272,10 @@
           </div>
         </section>
       </div>
-      <section class="about-product">
+    </div>
+    <div class="wrapper-about-product">
+      <section class="about-product container">
         <h2 class="about-product__title">Пара слов о Перфораторах</h2>
-        <p class="about-product__subtitle">Перфоратор — универсальный строительный инструмент. Предназначен для
-          сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
         <p class="about-product__subtitle">Перфоратор — универсальный строительный инструмент. Предназначен для
           сверления и долбления отверстий в кирпиче, бетоне и камне. <br> Существуют электромеханические и
           пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного
@@ -301,16 +288,14 @@
     <div class="footer-wrapper-top">
       <div class="footer__top container">
         <div class="footer__top_left">
-          <a href="index.html" class="footer__top-logo-link"><img src="img/logo-header.png" width="138" height="23"
-              alt="Техномарт"></a>
+          <a href="index.html" class="footer__top-logo-link"><img src="img/logo-header.png" width="138" height="23" alt="Техномарт"></a>
           <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
         </div>
         <div class="footer__top_right">
           <ul class="footer__top-navigation">
             <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Компания</a></li>
             <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Новости</a></li>
-            <li class="footer__top-navigation-item"><a href="catalog.html"
-                class="footer__top-navigation-link">Каталог</a></li>
+            <li class="footer__top-navigation-item"><a href="catalog.html" class="footer__top-navigation-link">Каталог</a></li>
             <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Доставка</a></li>
             <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Контакты</a></li>
           </ul>
@@ -321,8 +306,7 @@
             </li>
             <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Инструмент</a>
             </li>
-            <li class="footer__bottom-navigation-item"><a href="#"
-                class="footer__bottom-navigation-link">Спецпредложения</a></li>
+            <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Спецпредложения</a></li>
           </ul>
         </div>
       </div>
@@ -335,13 +319,11 @@
               aria-label="Техномарт в ВКонтакте"></a></li>
           <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link footer__bottom-social-fb"
               aria-label="Техномарт в Facebook"></a></li>
-          <li class="footer__bottom-social-item"><a href="#"
-              class="footer__bottom-social-link footer__bottom-social-inst" aria-label="Техномарт в Instagram"></a></li>
+          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link footer__bottom-social-inst"
+              aria-label="Техномарт в Instagram"></a></li>
         </ul>
-        <p class="footer__bottom-communication">Обратная связь: <br> <a href="#"
-            class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
-        <p class="footer__bottom-developed">Разработано: <br> <a href="https://htmlacademy.ru/intensive/htmlcss"
-            class="footer__bottom-developed-link">htmlacademy.ru</a></p>
+        <p class="footer__bottom-communication">Обратная связь: <br> <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
+        <p class="footer__bottom-developed">Разработано: <br> <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
       </div>
     </div>
   </footer>
