changed button on link, added hover effect

--- a/catalog.html
+++ b/catalog.html
@@ -12,8 +12,7 @@
   <header class="header">
     <div class="header__wrapper">
       <div class="container container_flex">
-        <a href="index.html" class="header__logo-link"><img class="header__logo-img" src="img/logo-header.png" alt="Техномарт"
-            width="110" height="18"></a>
+        <a href="index.html" class="header__logo-link"><img class="header__logo-img" src="img/logo-header.png" width="110" height="18" alt="Техномарт"></a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <input class="search__input" id="search" type="search" name="search" placeholder="Поиск:">
           <label class="search__label" for="search" aria-label="Поиск"></label>
@@ -105,7 +104,7 @@
               <input class="filters-product__choice" id="makita" type="checkbox" name="manufacturers" value="Makita"
                 checked>
               <label class="filters-product__manufacturers" for="makita">Makita</label>
-              <input class="filters-product__choice" id="dewalt" type="checkbox" name="manufacturers" value="Dewalt">
+              <input class="filters-product__choice" id="dewalt" type="checkbox" name="manufacturers" value="Dewalt" disabled>
               <label class="filters-product__manufacturers" for="dewalt">Dewalt</label>
               <input class="filters-product__choice" id="hitachi" type="checkbox" name="manufacturers" value="Hitachi">
               <label class="filters-product__manufacturers" for="hitachi">Hitachi</label>
@@ -145,8 +144,8 @@
                 <p class="product__price">15500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -158,8 +157,8 @@
                 <p class="product__price">25500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product product_new">
@@ -171,8 +170,8 @@
                 <p class="product__price">12500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -184,8 +183,8 @@
                 <p class="product__price">15500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product product_new">
@@ -197,8 +196,8 @@
                 <p class="product__price">25500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -210,8 +209,8 @@
                 <p class="product__price">12500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product product_new">
@@ -223,8 +222,8 @@
                 <p class="product__price">15500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -236,8 +235,8 @@
                 <p class="product__price">25500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -249,8 +248,8 @@
                 <p class="product__price">12500 Р.</p>
               </section>
               <div class="product__purchase">
-                <button class="product__purchase-buy">Купить</button>
-                <button class="product__purchase-bookmark">В закладки</button>
+                <a href="#buy" class="product__purchase-buy">Купить</a>
+                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
           </div>
