added animation popup

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <div class="about__contacts">
         <h3 class="about__contacts-title">Контакты</h3>
         <p class="about__contacts-pick-up">Вы можете забрать товар сами,<br>заехав в наш офис:</p>
-        <a href="https://api-maps.yandex.ru/services/constructor/1.0/static/?um=constructor%3Afa64608eda52ee902dcb11177acc6af42556fdec6747dbd28cc65c0f084d6217&amp;width=600&amp;height=450&amp;lang=ru_RU" class="about__map-link" target="_blank"><img class="about__map" src="img/map-small.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></a>
+        <a href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.324850%2C59.938803&source=constructorLink&um=constructor%3Afa64608eda52ee902dcb11177acc6af42556fdec6747dbd28cc65c0f084d6217&z=16" class="about__map-link" target="_blank"><img class="about__map" src="img/map-small.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></a>
         <a href="#write-us" class="about__contacts-write-us">Заблудились? Напишите нам!</a>
       </div>
       <div id="map" class="popup-map">
@@ -273,17 +273,15 @@
           <div class="wrapper-answer">
             <p class="wrapper-name">
               <label class="write-us__label" for="your-name">Ваше Имя:</label>
-              <input class="write-us__input" type="text" name="name" id="your-name" placeholder="Имя Фамилия" required>
+              <input class="write-us__input" type="text" name="name" id="your-name" placeholder="Имя Фамилия">
             </p>
             <p class="wrapper-email">
               <label class="write-us__label" for="your-email">Ваш email:</label>
-              <input class="write-us__input" type="email" name="email" id="your-email" placeholder="email@example.com"
-                required>
+              <input class="write-us__input" type="email" name="email" id="your-email" placeholder="email@example.com">
             </p>
             <p class="wrapper-text">
               <label class="write-us__label" for="your-text">Текст письма:</label>
-              <textarea class="write-us__textarea" name="text" id="your-text" cols="61" rows="6" placeholder="В свободной форме"
-                required></textarea>
+              <textarea class="write-us__textarea" name="text" id="your-text" cols="61" rows="6" placeholder="В свободной форме"></textarea>
             </p>
           </div>
           <div class="wrapper-answer-btn">
