--- a/catalog.html
+++ b/catalog.html
@@ -144,8 +144,8 @@
                 <p class="product__price">15500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -157,8 +157,8 @@
                 <p class="product__price">25500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product product_new">
@@ -170,8 +170,8 @@
                 <p class="product__price">12500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -183,8 +183,8 @@
                 <p class="product__price">15500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product product_new">
@@ -196,8 +196,8 @@
                 <p class="product__price">25500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -209,8 +209,8 @@
                 <p class="product__price">12500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product product_new">
@@ -222,8 +222,8 @@
                 <p class="product__price">15500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -235,8 +235,8 @@
                 <p class="product__price">25500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
             <article class="product">
@@ -248,8 +248,8 @@
                 <p class="product__price">12500 Р.</p>
               </section>
               <div class="product__purchase">
-                <a href="#buy" class="product__purchase-buy">Купить</a>
-                <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+                <a href="#" class="product__purchase-buy">Купить</a>
+                <a href="#" class="product__purchase-bookmark">В закладки</a>
               </div>
             </article>
           </div>
