--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <p class="product__price">25500 Р.</p>
           </section>
           <div class="product__purchase">
-            <a href="#buy" class="product__purchase-buy">Купить</a>
-            <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+            <a href="#" class="product__purchase-buy">Купить</a>
+            <a href="#" class="product__purchase-bookmark">В закладки</a>
           </div>
         </article>
         <article class="product">
@@ -130,8 +130,8 @@
             <p class="product__price">15500 Р.</p>
           </section>
           <div class="product__purchase">
-            <a href="#buy" class="product__purchase-buy">Купить</a>
-            <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+            <a href="#" class="product__purchase-buy">Купить</a>
+            <a href="#" class="product__purchase-bookmark">В закладки</a>
           </div>
         </article>
         <article class="product">
@@ -143,8 +143,8 @@
             <p class="product__price">25500 Р.</p>
           </section>
           <div class="product__purchase">
-            <a href="#buy" class="product__purchase-buy">Купить</a>
-            <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+            <a href="#" class="product__purchase-buy">Купить</a>
+            <a href="#" class="product__purchase-bookmark">В закладки</a>
           </div>
         </article>
         <article class="product product_new">
@@ -156,8 +156,8 @@
             <p class="product__price">12500 Р.</p>
           </section>
           <div class="product__purchase">
-            <a href="#buy" class="product__purchase-buy">Купить</a>
-            <a href="#bookmarks" class="product__purchase-bookmark">В закладки</a>
+            <a href="#" class="product__purchase-buy">Купить</a>
+            <a href="#" class="product__purchase-bookmark">В закладки</a>
           </div>
         </article>
       </div>
