--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -333,7 +333,7 @@
     </div>
   </footer>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=e5bbda38-1328-4438-9f35-6b2fd9695d7d&lang=ru_RU"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
